--- a/webApp/templates/validate.html
+++ b/webApp/templates/validate.html
@@ -30,7 +30,8 @@
                     <h3>Status</h3>
                 </div>
                 <div class="card-body scroll">
-                    <p>Something......</p>
+                    <p>Valid: {{ page_data.valid_bool }}</p>
+                    <p>{{ page_data.valid_msg }}</p>
                 </div>
             </div>
         </div>
