--- a/webApp/templates/validate.html
+++ b/webApp/templates/validate.html
@@ -28,7 +28,7 @@
 
             <div class="card mx-auto w-100">
                 <div class="card-header">
-                    <h3>Message</h3>
+                    <h3>Message - {{ page_data.message_type }}</h3>
                 </div>
                 <div class="card-body scroll">
                     <pre>{{ page_data.message }}</pre>
