--- a/webApp/templates/static/base.html
+++ b/webApp/templates/static/base.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>OpenC2 | {{ page_title if page_title else "SET TITLE"}}</title>
-        <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon//favicon.ico') }}">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/themes/materia.css') }}">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon/favicon.ico') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/themes/sandstone.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
         <script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/popper-1.14.0.min.js') }}"></script>
