--- a/webApp/templates/static/nav.html
+++ b/webApp/templates/static/nav.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">
-        OpenC2
+		<img src="{{ url_for('static', filename='img/favicon/favicon.ico') }}" alt="Logo" />
+		<a href="https://github.com/oasis-open/openc2-jadn/tree/master/jadn">JDAN</a>&nbsp;Lint
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -23,11 +24,5 @@
                 </div>
             </li>
         </ul>
-        <!--
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search">
-            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-        </form>
-        -->
     </div>
 </nav>
