--- a/webApp/static/css/styles.css
+++ b/webApp/static/css/styles.css
@@ -1,16 +1,19 @@
 /*
 Custom CSS Styles
 */
-
+.navbar-brand > img {
+  max-height: 2em;
+  width: auto;
+  -moz-padding: 15px; /* firefox bug fix */
+}
 .container-fluid .row > *{
     max-width: 1200px;
 }
-
-pre, textarea {
+.code, textarea {
     font-family: "Courier New", Courier, monospace;
     font-size: 1em;
+	white-space: pre;
 }
-
 div.scroll {
     max-height: 20em;
     overflow: scroll;
